@@ -19,8 +19,6 @@
 
 package de.unijena.bioinf.ms.frontend.subtools.zodiac;
 
-import de.unijena.bioinf.ChemistryBase.algorithm.scoring.FormulaScore;
-import de.unijena.bioinf.ChemistryBase.algorithm.scoring.SScored;
 import de.unijena.bioinf.ChemistryBase.chem.Ionization;
 import de.unijena.bioinf.ChemistryBase.chem.MolecularFormula;
 import de.unijena.bioinf.ChemistryBase.chem.PrecursorIonType;
@@ -42,12 +40,9 @@ import de.unijena.bioinf.GibbsSampling.properties.*;
 import de.unijena.bioinf.jjobs.JobSubmitter;
 import de.unijena.bioinf.ms.frontend.subtools.DataSetJob;
 import de.unijena.bioinf.ms.frontend.utils.PicoUtils;
-import de.unijena.bioinf.projectspace.FormulaScoring;
+import de.unijena.bioinf.projectspace.FCandidate;
 import de.unijena.bioinf.projectspace.Instance;
-import de.unijena.bioinf.projectspace.FormulaResult;
-import de.unijena.bioinf.projectspace.FormulaResultRankingScore;
 import de.unijena.bioinf.quality_assessment.TreeQualityEvaluator;
-import de.unijena.bioinf.sirius.scores.SiriusScore;
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.LoggerFactory;
 
@@ -70,55 +65,59 @@ public class ZodiacSubToolJob extends DataSetJob {
     double forcedCandidatesPerIonizationRatio;
 
     public ZodiacSubToolJob(ZodiacOptions cliOptions, @NotNull JobSubmitter jobSubmitter) {
-        super(in -> in.loadCompoundContainer().hasResults() && !in.getExperiment().getMs2Spectra().isEmpty(),
-                jobSubmitter); //check whether the compound has formula results or not
+        super(jobSubmitter); //check whether the compound has formula results or not
         this.cliOptions = cliOptions;
     }
 
     @Override
+    protected boolean isInstanceValid(Instance instance) {
+        return instance.hasSiriusResult();
+    }
+
+    @Override
     public boolean isAlreadyComputed(@NotNull Instance inst) {
-        try {
-            return inst.loadCompoundContainer().hasResults() && inst.loadFormulaResults(FormulaScoring.class).stream().anyMatch(res -> res.getCandidate().getAnnotationOrThrow(FormulaScoring.class).hasAnnotation(ZodiacScore.class));
-        } catch (Exception e) {
-            //only debug output, since the same instance will fail again below in computeAndAnnotateResult
-            logDebug("Error while reading molecular formula scores for "+inst.getID().getDirectoryName()+". Error: "+e.getMessage());
-            return false;
-        }
+        return inst.hasZodiacResult();
     }
 
     @Override
     protected void computeAndAnnotateResult(@NotNull List<Instance> instances) throws Exception {
         logInfo("START ZODIAC JOB");
-        final Map<Ms2Experiment, List<FormulaResult>> input = instances.stream()
-                .distinct().collect(Collectors.toMap(
-                        Instance::getExperiment, in -> {
-                            try {
-                                return in.loadFormulaResults(List.of(SiriusScore.class), FormulaScoring.class, FTree.class).stream().map(SScored::getCandidate).collect(Collectors.toList());
-                            } catch (Exception e) {
-                                logWarn("Error while reading molecular formula scores for "+in.getID().getDirectoryName()+". Exclude it from ZODIAC computation. Error: "+e.getMessage());
-                                return Collections.emptyList(); //empty lists are filtered below.
-                            }}
-                ));
 
-        //remove instances from input which don't have a single FTree
-        instances = instances.stream().filter(i -> !input.get(i.getExperiment()).isEmpty()).collect(Collectors.toList());
-        input.keySet().retainAll(instances.stream().map(Instance::getExperiment).collect(Collectors.toList()));
+        //this is the zodiac input
+        final Map<Ms2Experiment, List<FTree>> ms2ExperimentToTreeCandidates = new HashMap<>(instances.size());
+        //this is to know which zodiac result belongs to which instance
+        final Map<Ms2Experiment, Instance> ms2ExperimentToInstance = new HashMap<>(instances.size());
+        //this is to identify which formula results belongs to the score
+        final Map<FTree, FCandidate<?>> treeToId = new HashMap<>();
+        {
+            for (Instance instance : instances) {
+                List<FCandidate<?>> inputData = instance.getFTrees().stream()
+                        .filter(fc -> fc.hasAnnotation(FTree.class)).toList();
+                if (!inputData.isEmpty()) {
+                    Ms2Experiment exp = instance.getExperiment();
+                    ms2ExperimentToInstance.put(exp, instance);
+                    ms2ExperimentToTreeCandidates.put(exp, inputData.stream().map(sc -> sc.getAnnotationOrThrow(FTree.class)).collect(Collectors.toList()));
+                    inputData.forEach(p -> treeToId.put(p.getAnnotationOrThrow(FTree.class), p));
+                }
+            }
+        }
 
 
-//        if (instances.stream().anyMatch(it -> isRecompute(it) || (input.containsKey(it.getExperiment()) && !input.get(it.getExperiment()).get(0).getAnnotationOrThrow(FormulaScoring.class).hasAnnotation(ZodiacScore.class)))) {
+        Ms2Experiment settings = instances.get(0).getExperiment();
+        //TODO CHEEEEEECK REOMPUTE
+//        if (instances.stream().anyMatch(it -> isRecompute(it) || (treeToId.containsKey(it.getExperiment()) && !input.get(it.getExperiment()).get(0).getAnnotationOrThrow(FormulaScoring.class).hasAnnotation(ZodiacScore.class)))) {
 //            System.out.println("I am ZODIAC and run " + instances.size() + " instances: ");
 
-        Map<Ms2Experiment, List<FTree>> ms2ExperimentToTreeCandidates = input.keySet().stream().collect(Collectors.toMap(k -> k, k -> input.get(k).stream().map(r -> r.getAnnotationOrThrow(FTree.class)).collect(Collectors.toList())));
-        Ms2Experiment settings = instances.get(0).getExperiment();
 
         // TODO: we might want to do that for SIRIUS
         checkForInterruption();
-        updateProgress(Math.round(.02 * maxProgress), "Use caching of formulas.");
 
+        updateProgress(Math.round(.02 * maxProgress), "Use caching of formulas.");
         {
             HashMap<MolecularFormula, MolecularFormula> formulaMap = new HashMap<>();
+
             for (List<FTree> trees : ms2ExperimentToTreeCandidates.values()) {
-                for (FTree tree : trees) {
+                trees.forEach(tree -> {
                     for (Fragment f : tree) {
                         formulaMap.putIfAbsent(f.getFormula(), f.getFormula());
                         f.setFormula(formulaMap.get(f.getFormula()), f.getIonization());
@@ -127,11 +126,12 @@ public class ZodiacSubToolJob extends DataSetJob {
                         formulaMap.putIfAbsent(l.getFormula(), l.getFormula());
                         l.setFormula(formulaMap.get(l.getFormula()));
                     }
-                }
+                });
             }
         }
-//        logInfo();
+
         checkForInterruption();
+
         updateProgress(Math.round(.03 * maxProgress), "Caching done.");
 
         maxCandidatesAt300 = settings.getAnnotationOrThrow(ZodiacNumberOfConsideredCandidatesAt300Mz.class).value;
@@ -140,6 +140,7 @@ public class ZodiacSubToolJob extends DataSetJob {
 
         //annotate compound quality at limit number of candidates
         logInfo("TREES LOADED.");
+
         TreeQualityEvaluator treeQualityEvaluator = new TreeQualityEvaluator(0.8, 5);
         for (Map.Entry<Ms2Experiment, List<FTree>> ms2ExperimentListEntry : ms2ExperimentToTreeCandidates.entrySet()) {
             checkForInterruption();
@@ -175,23 +176,26 @@ public class ZodiacSubToolJob extends DataSetJob {
         ZodiacEdgeFilterThresholds edgeFilterThresholds = settings.getAnnotationOrThrow(ZodiacEdgeFilterThresholds.class);
         ZodiacRunInTwoSteps zodiacRunInTwoSteps = settings.getAnnotationOrThrow(ZodiacRunInTwoSteps.class);
         ZodiacClusterCompounds clusterEnabled = settings.getAnnotationOrThrow(ZodiacClusterCompounds.class);
+
         logInfo("Cluster enabled? " + clusterEnabled.value);
+
         //node scoring
         NodeScorer[] nodeScorers;
         List<LibraryHit> anchors = null;
-        if (cliOptions.libraryHitsFile != null) {
-            //todo implement option to set all anchors as good quality compounds
-            logInfo("use library hits as anchors.");
-            ZodiacLibraryScoring zodiacLibraryScoring = settings.getAnnotationOrThrow(ZodiacLibraryScoring.class);
-
-            anchors = parseAnchors(new ArrayList<>(input.keySet()));
-
-            Reaction[] reactions = ZodiacUtils.parseReactions(1);
-            Set<MolecularFormula> netSingleReactionDiffs = new HashSet<>();
-            for (Reaction reaction : reactions) {
-                netSingleReactionDiffs.add(reaction.netChange());
-            }
-            nodeScorers = new NodeScorer[]{new StandardNodeScorer(true, 1d), new LibraryHitScorer(zodiacLibraryScoring.lambda, zodiacLibraryScoring.minCosine, netSingleReactionDiffs)};
+        final boolean includeLibraryHitsAsAnchorsHere = false;
+        if (includeLibraryHitsAsAnchorsHere) { //todo include library hits from SIRIUS spectral library search as anchors. Don't use a separate input file anymore
+//            //todo implement option to set all anchors as good quality compounds
+//            logInfo("use library hits as anchors.");
+//            ZodiacLibraryScoring zodiacLibraryScoring = settings.getAnnotationOrThrow(ZodiacLibraryScoring.class);
+//
+//            anchors = parseAnchors(new ArrayList<>(ms2ExperimentToTreeCandidates.keySet()));
+//
+//            Reaction[] reactions = ZodiacUtils.parseReactions(1);
+//            Set<MolecularFormula> netSingleReactionDiffs = new HashSet<>();
+//            for (Reaction reaction : reactions) {
+//                netSingleReactionDiffs.add(reaction.netChange());
+//            }
+//            nodeScorers = new NodeScorer[]{new StandardNodeScorer(true, 1d), new LibraryHitScorer(zodiacLibraryScoring.lambda, zodiacLibraryScoring.minCosine, netSingleReactionDiffs)};
         } else {
             nodeScorers = new NodeScorer[]{new StandardNodeScorer(true, 1d)};
         }
@@ -219,6 +223,7 @@ public class ZodiacSubToolJob extends DataSetJob {
         ScoreProbabilityDistributionEstimator<FragmentsCandidate> scoreProbabilityDistributionEstimator = new ScoreProbabilityDistributionEstimator<>(c, probabilityDistribution, edgeFilterThresholds.thresholdFilter);
 
         updateProgress(Math.round(.05 * maxProgress));
+
         checkForInterruption();
 
         Zodiac zodiac = new Zodiac(ms2ExperimentToTreeCandidates,
@@ -230,9 +235,11 @@ public class ZodiacSubToolJob extends DataSetJob {
         );
 
         checkForInterruption();
+
         //todo FINISH ZODIAC Progress
         //todo clustering disabled. Evaluate if it might help at any point?
         logInfo("RUN ZODIAC");
+
         final ZodiacResultsWithClusters clusterResults = submitSubJob(
                 zodiac.makeComputeJob(zodiacEpochs.iterations, zodiacEpochs.burnInPeriod, zodiacEpochs.numberOfMarkovChains))
                 .awaitResult();
@@ -243,32 +250,15 @@ public class ZodiacSubToolJob extends DataSetJob {
         updateProgress(Math.round(.9 * maxProgress));
 
         //add score and set new Ranking score
-        instances.forEach(inst -> {
+        scoreResults.forEach((exp, map) -> {
             try {
-//                System.out.println(inst.getID().getDirectoryName());
-                final Map<FTree, ZodiacScore> sTress = scoreResults.get(inst.getExperiment());
-                final List<FormulaResult> formulaResults = input.get(inst.getExperiment());
-                if (formulaResults == null || sTress == null) {
-                    //this instance was not processed by ZODIAC
-                    return;
-                }
-                formulaResults.forEach(fr -> {
-                    FormulaScoring scoring = fr.getAnnotationOrThrow(FormulaScoring.class);
-                    scoring.setAnnotation(ZodiacScore.class,
-                            sTress.getOrDefault(fr.getAnnotationOrThrow(FTree.class), FormulaScore.NA(ZodiacScore.class))
-                    );
+                List<FCandidate<?>> toWrite = map.entrySet().stream()
+                        .peek(e -> treeToId.get(e.getKey()).annotate(e.getValue()))
+                        .map(e -> treeToId.get(e.getKey())).collect(Collectors.toList());
 
-                    inst.updateFormulaResult(fr, FormulaScoring.class);
-//                    System.out.println(fr.getId().getFormula().toString() + sTress.get(fr.getAnnotationOrThrow(FTree.class)));
-                });
-
-                // set zodiac as ranking score
-                if (inst.getExperiment().getAnnotation(FormulaResultRankingScore.class).orElse(FormulaResultRankingScore.AUTO).isAuto()) {
-                    inst.getID().setRankingScoreTypes(ZodiacScore.class, SiriusScore.class);
-                    inst.updateCompoundID();
-                }
+                ms2ExperimentToInstance.get(exp).saveZodiacResult(toWrite);
             } catch (Throwable e) {
-                logError("Error when retrieving Zodiac Results for instance: " + inst.getID().getDirectoryName(), e);
+                logError("Error when retrieving Zodiac Results for instance: " + exp.getName(), e);
             }
         });
 
@@ -276,17 +266,18 @@ public class ZodiacSubToolJob extends DataSetJob {
         try { //ensure that summary does not crash job
             if (cliOptions.summaryFile != null)
                 ZodiacUtils.writeResultSummary(scoreResults, clusterResults.getResults(), cliOptions.summaryFile);
-        } catch (Exception e) {
+        } catch (
+                Exception e) {
             logError("Error when writing Deprecated ZodiacSummary", e);
         }
 
         try { //ensure that summary does not crash job
             if (cliOptions.bestMFSimilarityGraphFile != null)
                 ZodiacUtils.writeSimilarityGraphOfBestMF(clusterResults, cliOptions.bestMFSimilarityGraphFile);
-        } catch (Exception e) {
+        } catch (
+                Exception e) {
             logError("Error when writing ZODIAC graph", e);
         }
-//        }
     }
 
     private List<FTree> applyMaxCandidateThreshold(Ms2Experiment experiment, List<FTree> trees) {
@@ -297,7 +288,8 @@ public class ZodiacSubToolJob extends DataSetJob {
         return extractBestCandidates(trees, numCandidates, numCandidatesPerIonization);
     }
 
-    private List<FTree> extractBestCandidates(List<FTree> candidates, int numberOfResultsToKeep, int numberOfResultsToKeepPerIonization) {
+    private List<FTree> extractBestCandidates(List<FTree> candidates, int numberOfResultsToKeep,
+                                              int numberOfResultsToKeepPerIonization) {
         List<FTree> sortedCandidates;
         if (isSorted(candidates)) sortedCandidates = candidates;
         else {
@@ -355,17 +347,17 @@ public class ZodiacSubToolJob extends DataSetJob {
         return true;
     }
 
-    private List<LibraryHit> parseAnchors(List<Ms2Experiment> ms2Experiments) {
-        List<LibraryHit> anchors;
-        Path libraryHitsFile = cliOptions.libraryHitsFile;
-        try {
-            anchors = (libraryHitsFile == null) ? null : ZodiacUtils.parseLibraryHits(libraryHitsFile, ms2Experiments, LoggerFactory.getLogger(loggerKey())); //GNPS and in-house format
-        } catch (IOException e) {
-            logError("Cannot load library hits from file.", e);
-            return null;
-        }
-        return anchors;
-    }
+//    private List<LibraryHit> parseAnchors(List<Ms2Experiment> ms2Experiments) {
+//        List<LibraryHit> anchors;
+//        Path libraryHitsFile = cliOptions.libraryHitsFile;
+//        try {
+//            anchors = (libraryHitsFile == null) ? null : ZodiacUtils.parseLibraryHits(libraryHitsFile, ms2Experiments, LoggerFactory.getLogger(loggerKey())); //GNPS and in-house format
+//        } catch (IOException e) {
+//            logError("Cannot load library hits from file.", e);
+//            return null;
+//        }
+//        return anchors;
+//    }
 
 
     @Override
